force-app/main/default/main/default/objects/Follow_Up__c/Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Follow-Up</label>
    <nameField>
        <label>Revisit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Follow-Ups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>