force-app/main/default/main/default/objects/Follow_Up__c/fields/Confirmations_Made_By_Patients__c.field-meta.xml
<CustomField>
    <fullName>Confirmations_Made_By_Patients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmations Made By Patients</label>
    <type>Checkbox</type>
</CustomField>