force-app/main/default/main/default/objects/Follow_Up__c/fields/Email_of_the_Patients__c.field-meta.xml
<CustomField>
    <fullName>Email_of_the_Patients__c</fullName>
    <label>Email of the Patients</label>
    <type>Email</type>
</CustomField>