force-app/main/default/main/default/objects/Follow_Up__c/fields/Follow_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Time__c</fullName>
    <label>Follow-Up Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3:30 PM - 3:45 PM</fullName>
            </value>
            <value>
                <fullName>3:45 PM - 4:00 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM - 4:15 PM</fullName>
            </value>
            <value>
                <fullName>4:15 PM - 4:30 PM</fullName>
            </value>
            <value>
                <fullName>4:30 PM - 4:45 PM</fullName>
            </value>
            <value>
                <fullName>4:45 PM - 5:00 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM - 5:15 PM</fullName>
            </value>
            <value>
                <fullName>5:15 PM - 5:30 PM</fullName>
            </value>
            <value>
                <fullName>5:30 PM - 5:45 PM</fullName>
            </value>
            <value>
                <fullName>5:45 PM - 6:00 PM</fullName>
            </value>
            <value>
                <fullName>6:30 PM - 7:45 PM</fullName>
                <isActive>false</isActive>
                <label>6:30 PM - 7:45 PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>