force-app/main/default/main/default/objects/Follow_Up__c/fields/Patient_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Identification_Number__c</fullName>
    <label>Patient Identification Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>