force-app/main/default/main/default/objects/Follow_Up__c/fields/Previously_Checked_By_Dr__c.field-meta.xml
<CustomField>
    <fullName>Previously_Checked_By_Dr__c</fullName>
    <label>Previously Checked By Dr.</label>
    <length>200</length>
    <type>Text</type>
</CustomField>