force-app/main/default/main/default/objects/Follow_Up__c/fields/Re_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Appointment_Date__c</fullName>
    <label>Re-Appointment Date</label>
    <type>Date</type>
</CustomField>