force-app/main/default/main/default/objects/Follow_Up__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Re_Appointment_Date__c</columns>
    <columns>Previously_Checked_By_Dr__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Follow_Up_Time__c</columns>
    <columns>Confirmations_Made_By_Patients__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>