force-app/main/default/main/default/objects/Follow_Up__c/listViews/Today_s_Related.listView-meta.xml
<ListView>
    <fullName>Today_s_Related</fullName>
    <columns>NAME</columns>
    <columns>Previously_Checked_By_Dr__c</columns>
    <columns>Re_Appointment_Date__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Follow_Up_Time__c</columns>
    <columns>Confirmations_Made_By_Patients__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Follow_Up_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Confirmations_Made_By_Patients__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Fresh Follow-Ups</label>
</ListView>